[package]
name = "starframe-vault"
version = "0.1.0"
edition = "2021"
description = "A Star Frame vault program"

[dependencies]
star_frame = { git = "https://github.com/staratlasmeta/star_frame.git", features = [
    "idl",
], branch = "stegaBOB/fix/performance-stuff" }
bytemuck = { version = "1.18", features = ["derive"] }
borsh = { version = "1.5", features = ["derive"] }
anyhow = "1.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
test_helpers = ["star_frame/test_helpers"]
idl = ["star_frame/idl"]

[package.metadata.solana]
program-id = "GxpAtbXpkbDu5b86TidcmuF5RF9UJm821rqJ5W3S4T12"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
mollusk-svm = "0.5.1"
mollusk-svm-bencher = "0.5.1"
# Use compatible Solana versions
solana-sdk = "2.2.1"
solana-program = "2.2.1"
solana-pubkey = "2.2.1"
solana-account = "2.2.1"
solana-logger = "2.2.1"
solana-system-program = "2.2.1"
sha2 = "0.10.9"

[[bench]]
name = "vault_compute_units"
harness = false
